# lbm-rs

./: .gitignore  Cargo.toml  readme.md  shell.nix
src/: boundary.rs  grid.rs  lib.rs  solver.rs  traits.rs
src/distribution/: d2q9.rs
src/geometry/: circle.rs  mod.rs  plane.rs  point.rs  rectangle.rs
src/io/: traits.rs  vtk.rs
src/physics/: ns.rs
