[package]
name = "lbm"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
description = "Lattice Boltzmann Method"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
time = "0.3.22"
rayon = "1.7.0"

[lib]
name = "lbm"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'